src/current/v24.1/geoserver.md
---
title: Using GeoServer with CockroachDB
summary: Tutorial for configuring GeoServer to use CockroachDB.
toc: true
toc_not_nested: true
docs_area: 
---

This page has instructions for configuring [GeoServer](http://geoserver.org) to use CockroachDB as the underlying database.

The instructions here reuse parts of the data set described in the [Spatial Data tutorial]({% link {{ page.version.version }}/spatial-tutorial.md %}), specifically the `tutorial.roads` table, which contains the [U.S. National Atlas data set](https://www.sciencebase.gov/catalog/file/get/581d052be4b08da350d524ce?f=__disk__60%2F6b%2F4e%2F606b4e564884da8cca57ffeb229cd817006616e0&transform=1&allowOpen=true).

Many of the instructions on this page come from the following GeoServer documentation pages:

- [Using the web administration interface](https://docs.geoserver.org/stable/en/user/gettingstarted/web-admin-quickstart/index.html)
- [Publishing a PostGIS table](https://docs.geoserver.org/stable/en/user/gettingstarted/postgis-quickstart/index.html).

## Before you begin

You must have the following set up before proceeding with this tutorial:

- CockroachDB [installed on the local machine]({% link {{ page.version.version }}/install-cockroachdb.md %})
- GeoServer [installed on the local machine](https://docs.geoserver.org/stable/en/user/installation/index.html#installation).
    {{site.data.alerts.callout_success}}
    Mac users who use [Homebrew](https://brew.sh) can install GeoServer by typing `brew install geoserver`.
    {{site.data.alerts.end}}

These instructions assume you are running on a UNIX-like system.

## Step 1. Start CockroachDB and connect to your cluster

Start a CockroachDB cluster by following the instructions in [Start a Local Cluster]({% link {{ page.version.version }}/start-a-local-cluster.md %}).

## Step 2. Load spatial data

Connect to the running cluster from the [SQL client]({% link {{ page.version.version }}/cockroach-sql.md %}) and enter the statements below.

1. [Create]({% link {{ page.version.version }}/create-database.md %}) the `tutorial` database:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    CREATE DATABASE tutorial;
    ~~~

1. Switch to the `tutorial` database:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    USE tutorial;
    ~~~

1. In a separate terminal, download the spatial data set:

    {% include_cached copy-clipboard.html %}
    ~~~ shell
    curl -o bookstores-and-roads.sql https://spatial-tutorial.s3.us-east-2.amazonaws.com/bookstores-and-roads-20210125.sql
    ~~~

1. Pipe the data set directly into [cockroach sql]({% link {{ page.version.version }}/cockroach-sql.md %}), specifying the [connection string]({% link {{ page.version.version }}/connection-parameters.md %}#connect-using-a-url) of your local cluster:

    {% include_cached copy-clipboard.html %}
    ~~~ shell
    cockroach sql --url {"CONNECTION STRING"} < bookstores-and-roads.sql
    ~~~

    The SQL execution will take some time to complete.

## Step 3. Turn on CockroachDB's experimental box comparison operators

CockroachDB's support for GeoServer is still in development. To use CockroachDB with GeoServer, you will need to enable the use of certain experimental box2d comparison operators by changing the following [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %}):

{% include_cached copy-clipboard.html %}
~~~ sql
SET CLUSTER SETTING sql.spatial.experimental_box2d_comparison_operators.enabled = ON;
~~~

The reasons the box2d comparison operators are experimental in CockroachDB are as follows:

- PostGIS uses the `&&`, `~`, and `@` operators to do bounding box comparisons. These comparisons can always be index-accelerated by PostgreSQL since it uses [R-tree based indexing](https://wikipedia.org/wiki/R-tree) to generate its coverings.
- CockroachDB [uses a different indexing strategy based on space-filling curves]({% link {{ page.version.version }}/spatial-indexes.md %}) since this is necessary for [scaling horizontally]({% link {{ page.version.version }}/frequently-asked-questions.md %}#how-does-cockroachdb-scale).
  - This means that the coverings generated by CockroachDB's `&&`, `~`, and `@` operators for index-accelerated lookups are not the same as the bounding box coverings generated by PostGIS.
  - In practice, CockroachDB may return a smaller set of results for the same query, as the space-filling curve covering is often more exact than a bounding box covering, and will exclude from the result set any geometries that have an intersecting bounding box but where no part of the geometry hits the actual bounding box.
  - Note that the behavior described above only applies to index-accelerated lookups.

## Step 4. Start GeoServer

The easiest place to create the GeoServer data directory is in your user's home directory.

1. In the UNIX shell, run the following command:

    {% include_cached copy-clipboard.html %}
    ~~~ shell
    mkdir -p $HOME/geoserver
    ~~~

1. Start GeoServer by running the following command:

    {% include_cached copy-clipboard.html %}
    ~~~ shell
    geoserver $HOME/geoserver
    ~~~

You should see some log output that looks like the following:

~~~
2021-06-23 11:44:22.617:INFO::main: Logging initialized @721ms to org.eclipse.jetty.util.log.StdErrLog
2021-06-23 11:44:22.944:INFO:oejs.Server:main: jetty-9.4.36.v20210114; built: 2021-01-14T16:44:28.689Z; git: 238ec6997c7806b055319a6d11f8ae7564adc0de; jvm 1.8.0_282-b08
2021-06-23 11:44:22.969:INFO:oejdp.ScanningAppProvider:main: Deployment monitor [file:///usr/local/Cellar/geoserver/2.19.1/libexec/webapps/] at interval 1
2021-06-23 11:44:23.732:INFO:oejw.StandardDescriptorProcessor:main: NO JSP Support for /geoserver, did not find org.eclipse.jetty.jsp.JettyJspServlet
2021-06-23 11:44:24.687:INFO:oejs.session:main: DefaultSessionIdManager workerName=node0
2021-06-23 11:44:24.687:INFO:oejs.session:main: No SessionScavenger set, using defaults
...
~~~

## Step 5. Log in to GeoServer

In this and the following steps we will set up GeoServer so it can access the spatial data we loaded in [Step 2](#step-2-load-spatial-data).

Open your web browser and navigate to your [locally running GeoServer instance](http://localhost:8080/geoserver/web/). Log in using the default credentials: username `admin`, password `geoserver`.

## Step 6. Set up a GeoServer Workspace

In the left-hand navigation menu, click **Data > Workspaces**. The **Workspaces** page will load. Click the **Add new workspace** button.

On the **New Workspace** page, enter the following information:

- In the **Name** field, enter the text "spatial-tutorial".
- In the **Namespace URI** field, enter the URL for the spatial tutorial where this data set is used: `{% link {{ page.version.version }}/spatial-tutorial.md %}`.

Press the **Save** button.

You will be redirected to the **Workspaces** page, and you should see a workspace called **spatial-tutorial** in the list.

## Step 7. Configure GeoServer to use CockroachDB

In the left-hand navigation menu, click **Data > Stores**. The **Stores** page will load. Click the **Add new Store** button.

You will be taken to the **New data source** page. Under the list of **Vector Data Sources**, click **PostGIS**.

This opens the **New Vector Data Source** page, where you need to enter the following information:

1. Under **Basic Store Info**, fill in the **Data Source Name** field with the text: `CockroachDB`

1. Under **Connection Parameters**, edit **port** to the default CockroachDB port: `26257`

1. Edit the **database** field to add the text: `tutorial`

1. Fill in the **user** field with the text: `root`

1. Delete the contents of the **passwd** field, if any

Click **Save**, and you will be redirected to the **New Layer** page, with the following unpublished layers:

- bookstore_routes
- bookstores
- roads

Click the **Publish** button to the right of the `roads` layer.

This will bring you to the **Edit Layer** page, where you need to enter the following information:

1. In the **Bounding Boxes** section, for the **Native Bounding Box** settings, click the **Compute from data** button, which will fill in the form fields.
1. Also in the **Bounding Boxes** section, for the **Lat/Lon Bounding Box** setting, click the **Compute from native bounds** button, which will fill in the form fields.

Click **Save**, and you will be redirected to the **Layers** page.

## Step 8. View the `roads` layer

In the left-hand navigation menu, click **Data > Layer Preview**.

You will be redirected to the **Layer Preview** page.

In the row for the `roads` layer, click the **OpenLayers** button under the **Common Formats** column.

Your browser should open a new tab with the title **OpenLayers map preview**. It should show a map view that looks like the following:

<img src="/docs/images/{{ page.version.version }}/geospatial/geoserver-us-atlas-00.png" alt="GeoServer U.S. National Atlas preview" style="border:1px solid #eee;max-width:100%" />

## See also

- [Install CockroachDB]({% link {{ page.version.version }}/install-cockroachdb.md %})
- [Spatial Data Overview]({% link {{ page.version.version }}/spatial-data-overview.md %})
- [Spatial Indexes]({% link {{ page.version.version }}/spatial-indexes.md %})
- [Spatial & GIS Glossary of Terms]({% link {{ page.version.version }}/architecture/glossary.md %})
- [Export Spatial Data]({% link {{ page.version.version }}/export-spatial-data.md %})
- [Migrate from Shapefiles]({% link {{ page.version.version }}/migrate-from-shapefiles.md %})
- [Migrate from GeoJSON]({% link {{ page.version.version }}/migrate-from-geojson.md %})
- [Migrate from GeoPackage]({% link {{ page.version.version }}/migrate-from-geopackage.md %})
- [Migrate from OpenStreetMap]({% link {{ page.version.version }}/migrate-from-openstreetmap.md %})
- [Spatial Functions]({% link {{ page.version.version }}/functions-and-operators.md %}#spatial-functions)
- [POINT]({% link {{ page.version.version }}/point.md %})
- [LINESTRING]({% link {{ page.version.version }}/linestring.md %})
- [POLYGON]({% link {{ page.version.version }}/polygon.md %})
- [MULTIPOINT]({% link {{ page.version.version }}/multipoint.md %})
- [MULTILINESTRING]({% link {{ page.version.version }}/multilinestring.md %})
- [MULTIPOLYGON]({% link {{ page.version.version }}/multipolygon.md %})
- [GEOMETRYCOLLECTION]({% link {{ page.version.version }}/geometrycollection.md %})
- [Well Known Text]({% link {{ page.version.version }}/well-known-text.md %})
- [Well Known Binary]({% link {{ page.version.version }}/well-known-binary.md %})
- [GeoJSON]({% link {{ page.version.version }}/geojson.md %})
- [SRID 4326 - Longitude and Latitude]({% link {{ page.version.version }}/srid-4326.md %})
- [`ST_Contains`]({% link {{ page.version.version }}/st_contains.md %})
- [`ST_ConvexHull`]({% link {{ page.version.version }}/st_convexhull.md %})
- [`ST_CoveredBy`]({% link {{ page.version.version }}/st_coveredby.md %})
- [`ST_Covers`]({% link {{ page.version.version }}/st_covers.md %})
- [`ST_Disjoint`]({% link {{ page.version.version }}/st_disjoint.md %})
- [`ST_Equals`]({% link {{ page.version.version }}/st_equals.md %})
- [`ST_Intersects`]({% link {{ page.version.version }}/st_intersects.md %})
- [`ST_Overlaps`]({% link {{ page.version.version }}/st_overlaps.md %})
- [`ST_Touches`]({% link {{ page.version.version }}/st_touches.md %})
- [`ST_Union`]({% link {{ page.version.version }}/st_union.md %})
- [`ST_Within`]({% link {{ page.version.version }}/st_within.md %})
- [Troubleshooting Overview]({% link {{ page.version.version }}/troubleshooting-overview.md %})
- [Support Resources]({% link {{ page.version.version }}/support-resources.md %})
